--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ version = "2.0.0"
 serde = "1"
 serde_json = "1"
 thiserror = "1"
+tokio = {version = "1", features = ["io-util", "io-std", "net", "process"], optional = true}
